# TrabalhoFinal-AED1-UFU

./: README.md
code/: CMakeLists.txt  f-series.c  f-series.h  main.c  perfis.c  perfis.h  profiles.txt  series.c  series.h
code/archives/: profiles.txt  s1.txt  s2.txt  s3.txt  s4.txt  s5.txt  s6.txt  s7.txt  s8.txt  s9.txt
